--- a/NeroBot/package.json
+++ b/NeroBot/package.json
@@ -2,7 +2,7 @@
   "name": "nero-bot",
   "version": "0.0.0",
   "description": "NeroBot",
-  "main": "nerobot.js",
+  "main": "run.js",
   "author": {
     "name": "Willem-Jan Pattyn"
   }
