--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nero-bot",
   "version": "0.0.0",
   "description": "A Discord bot, personalized as Nero from Fate/EXTRA",
-  "main": "run.js",
+  "main": "NeroBot/run.js",
   "scripts": {
     "start": "node NeroBot/run.js"
   },
