--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node NeroBot/run.js"
   },
   "dependencies": {
-    "discord.js": "11.2.1",
-      "request": "2.83.0"
+    "discord.js": "^11.2.1",
+    "discord.js-commando": "^0.9.0",
+    "request": "2.83.0"
   }
 }
