--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "discord.js": "^11.2.1",
     "discord.js-commando": "^0.9.0",
+    "pad-end": "^1.0.2",
     "pg": "7.4.0",
     "request": "2.83.0"
   }
