--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "discord.js-commando": "^0.9.0",
     "pad-end": "^1.0.2",
     "pg": "7.4.0",
-    "request": "2.83.0"
+    "request": "2.83.0",
+    "cryptiles": ">=4.1.2",
+    "request": "2.83.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
