--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "request": "2.83.0",
     "cryptiles": ">=4.1.2",
     "request": "2.83.0",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "extend": ">=3.0.2",
+    "stringstream": ">=0.0.6"
   }
 }
