--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "start": "node NeroBot/run.js"
   },
   "dependencies": {
-    "discord.js": "^11.2.1",
+    "discord.js": "^11.6.4",
     "discord.js-commando": "^0.9.0",
+    "extend": ">=3.0.2",
     "pad-end": "^1.0.2",
     "pg": "7.4.0",
     "request": "2.83.0",
-    "cryptiles": ">=4.1.2",
-    "xmlhttprequest": "^1.8.0",
-    "extend": ">=3.0.2",
-    "stringstream": ">=0.0.6"
-  }
+    "stringstream": ">=0.0.6",
+    "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {}
 }
