--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "discord.js-commando": "^0.9.0",
+    "express": "^4.17.1",
     "extend": ">=3.0.2",
     "pad-end": "^1.0.2",
     "pg": "7.4.0",
