--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "pg": "^8.7.3",
     "request": "2.83.0",
     "stringstream": ">=0.0.6",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "json-schema": ">=0.4.0",
+    "cryptiles": ">=4.1.2",
+    "hawk": ">=9.0.1",
+    "ajv": ">=6.12.3"
   }
 }
