--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "ajv": ">=6.12.3",
     "cryptiles": ">=4.1.2",
-    "discord.js": "^13.8.0",
+    "discord.js": "^14.0.0",
     "discord.js-commando": "^0.12.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
@@ -18,7 +18,7 @@
     "json-schema": ">=0.4.0",
     "pad-end": "^1.0.2",
     "pg": "^8.7.3",
-    "request": "2.83.0",
+    "request": "^2.88.2",
     "stringstream": ">=0.0.6",
     "xmlhttprequest": "^1.8.0"
   }
