--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "server": "nodemon src/run.js"
   },
   "dependencies": {
-    "@discord-player/extractor": "^4.1.1",
+    "@discord-player/extractor": "^4.4.4",
     "@discordjs/builders": "^1.4.0",
-    "@discordjs/opus": "^0.9.0",
     "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.14.0",
     "ajv": ">=6.12.3",
     "cryptiles": ">=4.1.2",
     "discord-api-types": "^0.37.35",
-    "discord-player": "^6.1.0",
+    "discord-player": "^6.6.4",
     "discord.js": "^14.0.0",
     "discord.js-commando": "^0.12.3",
     "dotenv": "^16.0.3",
@@ -25,14 +24,16 @@
     "ffmpeg-static": "^5.1.0",
     "hawk": ">=9.0.1",
     "json-schema": ">=0.4.0",
+    "mediaplex": "^0.0.6",
     "pad-end": "^1.0.2",
     "pg": "^8.7.3",
-    "play-dl": "^1.9.6",
     "request": "^2.88.2",
     "stringstream": ">=0.0.6",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "youtube-ext": "^1.1.15",
+    "yt-stream": "^1.4.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^3.0.1"
   }
 }
